# jarkdown

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MANIFEST.in  OPEN-SOURCE-REPO-SUGGESTIONS.md  PUBLISHING.md  README.md  TECHNICAL-DESIGN-DOCUMENT.md  attachment_handler.py  exceptions.py  jira_api_client.py  jira_download.py  markdown_converter.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-to-pypi.yml
.vbw-planning/: .agent-panes  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  conventions.json  discovery.json
.vbw-planning/milestones/jarkdown/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SHIPPED.md  STATE.md
.vbw-planning/milestones/jarkdown/01-standard-field-coverage/: 01-CONTEXT.md  01-PLAN-01.md  01-PLAN-02-SUMMARY.md  01-PLAN-02.md  01-PLAN-03-SUMMARY.md  01-PLAN-03.md  01-PLAN-04-SUMMARY.md  01-PLAN-04.md  01-UAT.md  01-VERIFICATION-wave1.md  01-VERIFICATION.md
.vbw-planning/milestones/jarkdown/02-custom-fields-adf/: 02-CONTEXT.md  02-PLAN-04-SUMMARY.md  02-PLAN-04.md
.vbw-planning/milestones/jarkdown/03-uv-migration-tooling/: 03-PLAN-02-SUMMARY.md  03-VERIFICATION.md  discovery.json
.vbw-planning/milestones/jarkdown/04-bulk-export-jql/: 04-01-SUMMARY.md  04-04-SUMMARY.md  04-PLAN-01.md  04-PLAN-03.md  04-PLAN-04.md
.vbw-planning/phases/01-standard-field-coverage/: 01-PLAN-01-SUMMARY.md  01-RESEARCH.md
.vbw-planning/phases/02-custom-fields-adf/: 02-PLAN-01-SUMMARY.md  02-PLAN-01.md  02-PLAN-02-SUMMARY.md  02-PLAN-02.md  02-PLAN-03-SUMMARY.md  02-PLAN-03.md  02-RESEARCH.md  02-VERIFICATION.md
.vbw-planning/phases/03-uv-migration-tooling/: 03-CONTEXT.md  03-PLAN-01-SUMMARY.md  03-PLAN-01.md  03-PLAN-02.md  03-PLAN-03-SUMMARY.md  03-PLAN-03.md  03-RESEARCH.md
.vbw-planning/phases/04-bulk-export-jql/: 04-02-SUMMARY.md  04-03-SUMMARY.md  04-CONTEXT.md  04-PLAN-02.md  04-RESEARCH.md  04-UAT.md  04-VERIFICATION.md  discovery.json
TEST-456/: TEST-456.md
docs/: README.md  requirements.txt
docs/design/: 20250815181052-TECHNICAL-DESIGN.md  20250815181224-TEST-DESIGN.md  20250815181620-TECHNICAL-DESIGN-V2.md  20250815181620-TECHNICAL-DESIGN.md  20250815183933-REPO-CLEANUP-PLAN.md  20250815190000-CODE-REVIEW.md  20250815191500-COMMENT-EXPORT-TECHNICAL-DESIGN.md  20250815204500-PACKAGE-REFACTOR-DESIGN.md  20250815210000-COMMENT-EXPORT-TECHNICAL-DESIGN-REVISION.md  20250815220000-CODE-REVIEW.md  20250815221000-CI-WORKFLOW-FIX-PLAN.md  20250815222000-ENHANCED-DOCUMENTATION-PLAN.md  20250815223000-PRE-COMMIT-HOOK-PLAN.md  20250816170000-RENAMING-PLAN.md  20250816180000-IMPROVING-USER-ACCESSIBILITY-PLAN.md  20250816190000-PYPI-PUBLISH-TECHNICAL-DESIGN.md  20250816193000-ENHANCED-METADATA-EXPORT-DESIGN.md  20250816200000-PYPI-PUBLISH-WORKFLOW.md  CODE_REVIEW_ASSESSMENT.md  GEMINI.md  README.md
docs/source/: api_reference.rst  architecture.md  beginners_guide.md  changelog.md  conf.py  configuration.md  contributing.md  index.rst  installation.md  license.md  usage.md  use_case_ai_context.md
jira_download_pkg/: __init__.py  attachment_handler.py  jira_api_client.py  jira_download.py  markdown_converter.py
src/jarkdown/: __init__.py  attachment_handler.py  bulk_exporter.py  config_manager.py  custom_field_renderer.py  exceptions.py  export_core.py  field_cache.py  jarkdown.py  jira_api_client.py  markdown_converter.py  retry.py
src/jira_download/: attachment_handler.py  exceptions.py  jira_download.py  markdown_converter.py
tests/: conftest.py  test_adf_nodes.py  test_bulk_exporter.py  test_cli.py  test_components.py  test_config_manager.py  test_custom_fields.py  test_field_cache.py  test_frontmatter_fields.py  test_integration_phase02.py  test_integration_standard_fields.py  test_jira_downloader.py  test_retry.py  test_sections_links_subtasks.py  test_sections_worklogs_env.py
tests/data/: adf_inline_nodes.json  adf_panel_expand_rule.json  adf_table.json  adf_task_decision.json  issue_full_fields.json  issue_no_attachments.json  issue_no_description.json  issue_standard_fields.json  issue_with_adf_media.json  issue_with_adf_rich.json  issue_with_attachments.json  issue_with_comments.json  issue_with_custom_fields.json  issue_with_environment.json  issue_with_links.json  issue_with_subtasks.json  issue_with_worklogs.json  issue_with_worklogs_truncated.json
